--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@
   border: 2px solid green;
   margin-left: auto;
   margin-right: auto;
+  cursor: pointer;
 }
 
 .gallery {
@@ -21,4 +22,45 @@
 .gallery-control.disabled {
   cursor: default;
   color: lightgrey;
+}
+
+/* Modal */
+.gallery-modal {
+    /*display: none;*/ /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 2% auto; /* 15% from the top and centered */
+    margin-left: 5%;
+    margin-right: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 90%; /* Could be more or less, depending on screen size */
+    height: 90%;
+}
+
+/* The Close Button */
+.modal-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
